# terraform-provider-kanidm

./: .goreleaser.yml  go.mod  go.sum
.github/workflows/: release.yml  test.yml
internal/client/: client.go  group.go  oauth2.go  person.go  service_account.go  unix.go
internal/provider/: account_policy_resource.go  group_resource.go  oauth2_basic_resource.go  oauth2_client_resource.go  person_resource.go  service_account_resource.go  system_denied_names_resource.go
tools/kanidm-tf-import/: .gitignore  pyproject.toml
tools/kanidm-tf-import/src/kanidm_tf_import/: builtin_groups.py  cli.py  client.py  hcl.py  resolver.py
tools/kanidm-tf-import/src/kanidm_tf_import/generators/: group.py  oauth2_client.py  person.py  service_account.py
