[project]
name = "kanidm-tf-import"
version = "0.1.0"
description = "Generate Terraform HCL configuration from a live Kanidm instance"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "python-hcl2>=8.0.0",
]

[project.scripts]
kanidm-tf-import = "kanidm_tf_import.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanidm_tf_import"]
